Fix issue with extra padding on guide page and add button for assistance request in guide page

--- a/src/components/GuideList/styles.module.scss
+++ b/src/components/GuideList/styles.module.scss
@@ -48,9 +48,10 @@
   }
 
   .image-wrapper {
+    width: calc(100% + #{3.3em});
     .image {
       position: static !important;
-      width: calc(100% + #{3em});
+      width: calc(100% + #{2em});
       margin-top: -1.5em;
       margin-bottom: 1.5em;
       margin-left: -1.5em;
@@ -60,6 +61,7 @@
 
 @include breakpoint(xsmall) {
   .article {
+    @include padding(1em, 1em);
     width: 100%;
     margin: 0 0 _size(element-margin) 0 !important;
   }
@@ -67,8 +69,9 @@
 
 @include breakpoint(xxsmall) {
   .image-wrapper {
+    width: calc(100% + #{3em});
     .image {
-      width: calc(100% + #{1em});
+      width: 100%;
       margin-top: -1.5em;
       margin-bottom: 1.5em;
       margin-left: -1.5em;
